--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   --aside-width: 400px;
   --cart-aside-summary-height-with-discount: 300px;
@@ -470,4 +475,84 @@ aside li {
 
 .account-logout {
   display: inline-block;
+}
+
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  z-index: 2;
+}
+
+.modal.open {
+  display: flex;
+}
+
+.modal-content {
+  background: #fff;
+  margin: 40px;
+  border-radius: 5px;
+  width: 90vw;
+  height: 90vh;
+  text-align: center;
+  display: flex;
+  gap: 40px;
+
+  position: relative;
+}
+
+.modal-img {
+  width: 40%;
+}
+
+@media screen and (max-width: 1000px) {
+  .modal-img {
+    display: none;
+  }
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.text-with-line {
+  position: relative;
+  text-decoration: none;
+  color: #b00000;
+  font-weight: 700;
+  overflow: hidden;
+}
+
+.text-with-line::before {
+  content: "";
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  right: 0;
+  top: -1px;
+  border-bottom: 1px solid #000;
+  transform: rotate(45deg);
+}
+
+.text-with-line::after {
+  content: "";
+  position: absolute;
+  bottom: 50%;
+  left: 0;
+  right: 0;
+  top: -1px;
+  border-bottom: 1px solid #000;
+  transform: rotate(-45deg);
 }
